[gd_scene load_steps=14 format=3 uid="uid://b2uy80s5drju1"]

[ext_resource type="Script" path="res://scripts/nodes/combat_ui.gd" id="1_2a4mi"]
[ext_resource type="PackedScene" uid="uid://c4yrxxotd2eec" path="res://scenes/hand_viewer.tscn" id="1_ysx6n"]
[ext_resource type="Texture2D" uid="uid://d2sbbxceibwog" path="res://images/enemies/goblin.png" id="2_3cf06"]
[ext_resource type="PackedScene" uid="uid://dm2pborgnv1sf" path="res://scenes/deck.tscn" id="4_58srs"]
[ext_resource type="StyleBox" uid="uid://dp7g704h5bgcy" path="res://resources/themes/panel_skinny.tres" id="4_d8f4w"]
[ext_resource type="Script" path="res://scripts/nodes/grave_viewer.gd" id="4_o3lcj"]
[ext_resource type="StyleBox" uid="uid://dw2rwlmy1w4ur" path="res://resources/themes/panel_skinny_hover.tres" id="5_gdogb"]
[ext_resource type="StyleBox" uid="uid://2qpygtgmwnen" path="res://resources/themes/panel_skinny_pressed.tres" id="6_ietbi"]
[ext_resource type="StyleBox" uid="uid://bl8fxvfn5egmt" path="res://resources/themes/panel_skinny_focused.tres" id="7_crks5"]

[sub_resource type="LabelSettings" id="LabelSettings_uhff8"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppi0y"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vt2up"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_55qu0"]
font_size = 32

[node name="CombatUI" type="Control" node_paths=PackedStringArray("hand_view", "deck_view", "grave_view", "label_hp", "label_limbs", "label_mouth", "label_turn", "label_enemy_name", "label_enemy_plan", "label_enemy_hp", "bar_enemy_hp", "sprite_enemy", "container_enemy_status")]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_2a4mi")
hand_view = NodePath("Half/PanelContainer/Container/HSplitContainer/HandView")
deck_view = NodePath("Half/PanelContainer/Container/HSplitContainer/Vertical/DeckView")
grave_view = NodePath("Half/PanelContainer/Container/HSplitContainer/Vertical/GraveView")
label_hp = NodePath("Labels/HPLabel")
label_limbs = NodePath("Labels/LimbLabel")
label_mouth = NodePath("Labels/MouthLabel")
label_turn = NodePath("Labels/TurnLabel")
label_enemy_name = NodePath("Half/Enemy/VBox/EnemyNameLabel")
label_enemy_plan = NodePath("Half/Enemy/VBox/EnemyPlanLabel")
label_enemy_hp = NodePath("Half/Enemy/VBox/HP/EnemyHPLabel")
bar_enemy_hp = NodePath("Half/Enemy/VBox/HP/EnemyHPBar")
sprite_enemy = NodePath("Half/Enemy/VBox/EnemySprite")
container_enemy_status = NodePath("Half/Enemy/EnemyStatusContainer")

[node name="Half" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
collapsed = true
dragger_visibility = 2

[node name="Enemy" type="Control" parent="Half"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Half/Enemy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EnemyNameLabel" type="Label" parent="Half/Enemy/VBox"]
layout_mode = 2
text = "Enemy Name"
label_settings = SubResource("LabelSettings_uhff8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyPlanLabel" type="Label" parent="Half/Enemy/VBox"]
layout_mode = 2
text = "Enemy plans"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP" type="HSplitContainer" parent="Half/Enemy/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EnemyHPBar" type="ProgressBar" parent="Half/Enemy/VBox/HP"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
step = 0.1
value = 50.0
show_percentage = false

[node name="EnemyHPLabel" type="Label" parent="Half/Enemy/VBox/HP"]
layout_mode = 2
text = "X/X"

[node name="EnemySprite" type="TextureRect" parent="Half/Enemy/VBox"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_3cf06")
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="EnemyStatusContainer" type="HFlowContainer" parent="Half/Enemy"]
layout_mode = 0
offset_left = 993.0
offset_right = 1280.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Half"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_ppi0y")

[node name="Container" type="MarginContainer" parent="Half/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HSplitContainer" type="HSplitContainer" parent="Half/PanelContainer/Container"]
layout_mode = 2
size_flags_vertical = 8
collapsed = true
dragger_visibility = 2

[node name="HandView" parent="Half/PanelContainer/Container/HSplitContainer" groups=["hand_view"] instance=ExtResource("1_ysx6n")]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="Vertical" type="VBoxContainer" parent="Half/PanelContainer/Container/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GraveView" type="Button" parent="Half/PanelContainer/Container/HSplitContainer/Vertical"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_d8f4w")
theme_override_styles/hover = ExtResource("5_gdogb")
theme_override_styles/pressed = ExtResource("6_ietbi")
theme_override_styles/focus = ExtResource("7_crks5")
text = "View Graveyard (0)"
script = ExtResource("4_o3lcj")

[node name="DeckView" parent="Half/PanelContainer/Container/HSplitContainer/Vertical" instance=ExtResource("4_58srs")]
layout_mode = 2
size_flags_vertical = 3

[node name="Labels" type="Control" parent="."]
anchors_preset = 0

[node name="HPLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 16.0
offset_top = 391.0
offset_right = 100.0
offset_bottom = 419.0
text = "HP: X/Y"
label_settings = SubResource("LabelSettings_vt2up")

[node name="LimbLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 16.0
offset_top = 447.0
offset_right = 180.0
offset_bottom = 470.0
text = "Limb #: 2/2"
label_settings = SubResource("LabelSettings_vt2up")

[node name="MouthLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = 16.0
offset_top = 419.0
offset_right = 115.0
offset_bottom = 442.0
text = "Mouth #: 1/1"
label_settings = SubResource("LabelSettings_vt2up")

[node name="TurnLabel" type="Label" parent="Labels"]
layout_mode = 0
offset_right = 153.0
offset_bottom = 67.0
text = "Turn #"
label_settings = SubResource("LabelSettings_55qu0")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 121.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndTurnButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 1094.0
offset_top = 431.0
offset_right = 1280.0
offset_bottom = 475.0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("4_d8f4w")
theme_override_styles/hover = ExtResource("5_gdogb")
theme_override_styles/pressed = ExtResource("6_ietbi")
theme_override_styles/focus = ExtResource("7_crks5")
text = "End Turn"

[node name="StatusContainer" type="HFlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 266.0
offset_right = 285.0
offset_bottom = 384.0

[connection signal="card_selected" from="Half/PanelContainer/Container/HSplitContainer/HandView" to="." method="_on_hand_view_card_selected"]
[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
